--- a/style.css
+++ b/style.css
@@ -186,9 +186,14 @@ footer a:hover {
 }
 
 .news-text {
-  position: absolute;
+  /* position: absolute;
   padding-top: 85%;
-  padding-left: 20px;
+  padding-left: 20px; */
+  text-align: left;
+  position: relative;
+  top: 90%;
+  left: 60%;
+  transform: translate(-50%, -50%);
 }
 
 .thick-hr {
