--- a/style.css
+++ b/style.css
@@ -1,130 +1,97 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');
-
 /* Core Styles */
+
 body, html {
-    width: auto!important;
-    overflow-x: hidden!important;
-    margin: 0;
-    font-family: 'Poppins', sans-serif;
-    color: 222;
-    background-color: #FFFFFF;
-  }
+  width: auto!important;
+  overflow-x: hidden!important;
+  margin: 0;
+  font-family: 'Poppins', sans-serif;
+  color: 222;
+  background-color: #FFFFFF;
+}
 
-  .padding {
-      padding-bottom: 2rem;
-  }
-
-  .navbar {
-    background-color: #FFFFFF;
+.navbar {
+  background-color: #FFFFFF;
 }
 
 .navbar li a {
-    color: white;
-}
-
-.carousel-inner img {
-  height: 700px;
-  width: 100%;
-}
-.carousel-caption {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-}
-.carousel-caption h1 {
-  font-size: 500%;
-  text-transform: uppercase;
-  text-shadow: 1px 1px 15px #000;
-}
-.carousel-caption h3 {
-  font-size: 200%;
-  font-weight: 500;
-  text-shadow: 1px 1px 10px #000;
-  padding-bottom: 1rem;
+  color: white;
 }
 
 .social a {
   font-size: 4.5em;
   padding: 3rem;
 }
+
 .fa-facebook {
   color: #3b5998;
 }
+
 .fa-twitter {
   color: #00aced;
 }
+
 .fa-google-plus-g {
   color: #dd4b39;
 }
+
 .fa-instagram {
   color: #517fa4;
 }
+
 .fa-youtube {
   color: #bb0000;
 }
 
-.fa-facebook:hover,
-.fa-twitter:hover,
-.fa-google-plus-g:hover,
-.fa-instagram:hover,
-.fa-youtube:hover {
+.fa-facebook:hover, .fa-twitter:hover, .fa-google-plus-g:hover, .fa-instagram:hover, .fa-youtube:hover {
   color: #d5d5d5;
 }
 
-  .mission-header {
-    width: 75%;
-    margin: 0 auto;
-    padding-top: 2rem;
-  }
-
-  .mission-header hr {
-    border-top: 2px solid #b4b4b4;
-    width: 95%;
-    margin-top: .3rem;
-    margin-bottom: 1rem;
+.content-header {
+  width: 75%;
+  margin: 0 auto;
+  padding-top: 2rem;
 }
 
-  .mission-statement {
-    padding-top: 2rem;
-    padding-bottom: 5rem;
-  }
-  .team-header {
-    width: 75%;
-    margin: 0 auto;
-    padding-top: 2rem;
-  }
-  .welcome hr {
-    border-top: 2px solid #b4b4b4;
-    width: 95%;
-    margin-top: .3rem;
-    margin-bottom: 1rem;
-  }  
+.content-header hr {
+  border-top: 2px solid #b4b4b4;
+  width: 95%;
+  margin-top: .3rem;
+  margin-bottom: 1rem;
+}
+
+.mission-statement {
+  padding-top: 2rem;
+  padding-bottom: 5rem;
+}
+
 /* hero */
+
 .hero-image {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("img/hero.jpg");
-    height: 50%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("img/hero.jpg");
+  height: 50%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
 }
 
 .hero-text {
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-  }
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
 
 .jumbotron {
-    color: white;
-    background-image: url("img/hero.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100vh;
+  color: white;
+  background-image: url("img/hero.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
 }
 
 footer {
@@ -136,6 +103,7 @@ footer {
 footer a {
   color: #d5d5d5;
 }
+
 footer a:hover {
   color: #FFFFFF;
   text-decoration: none;
@@ -186,9 +154,6 @@ footer a:hover {
 }
 
 .news-text {
-  /* position: absolute;
-  padding-top: 85%;
-  padding-left: 20px; */
   text-align: left;
   position: relative;
   top: 90%;
@@ -203,25 +168,34 @@ footer a:hover {
   margin-bottom: 1rem;
 }
 
+@media only screen and (max-width: 599px) {
+  .content-header h1 {
+    font-size: 45px;
+  }
+}
+
+
 /* Small devices (portrait tablets and large phones, 600px and up) */
+
 @media only screen and (min-width: 600px) {}
 
 /* Medium devices (landscape tablets, 768px and up) */
+
 @media only screen and (min-width: 768px) {}
 
 /* Large devices (laptops/desktops, 992px and up) */
+
 @media only screen and (min-width: 992px) {}
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {}
 
-
-
-
-/* .avatar-steve {
-  background-image: url("img/profile/default-avatar.png");
-  background-position: center;
+@media only screen and (min-width: 1200px) {
+  .carousel-inner img {
+  height: 750px;
+  width: 100%;
+  /* background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 50vh;
-} */
+  position: relative; */
+}
+}
