--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');
-/* Core Styles */
 
 body, html {
   width: auto!important;
@@ -10,43 +9,7 @@ body, html {
   background-color: #FFFFFF;
 }
 
-.navbar {
-  background-color: #FFFFFF;
-}
-
-.navbar li a {
-  color: white;
-}
-
-.social a {
-  font-size: 4.5em;
-  padding: 3rem;
-}
-
-.fa-facebook {
-  color: #3b5998;
-}
-
-.fa-twitter {
-  color: #00aced;
-}
-
-.fa-google-plus-g {
-  color: #dd4b39;
-}
-
-.fa-instagram {
-  color: #517fa4;
-}
-
-.fa-youtube {
-  color: #bb0000;
-}
-
-.fa-facebook:hover, .fa-twitter:hover, .fa-google-plus-g:hover, .fa-instagram:hover, .fa-youtube:hover {
-  color: #d5d5d5;
-}
-
+/* section padding */
 .content-header {
   width: 75%;
   margin: 0 auto;
@@ -66,16 +29,6 @@ body, html {
 }
 
 /* hero */
-
-.hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("img/hero.jpg");
-  height: 50%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-}
-
 .hero-text {
   text-align: center;
   position: absolute;
@@ -94,21 +47,7 @@ body, html {
   height: 100vh;
 }
 
-footer {
-  background-color: #3f3f3f;
-  color: #d5d5d5;
-  padding-top: 1rem;
-}
-
-footer a {
-  color: #d5d5d5;
-}
-
-footer a:hover {
-  color: #FFFFFF;
-  text-decoration: none;
-}
-
+/* News Panel */
 .news-img1 {
   color: white;
   background-image: url("img/news/mk11_erron_black.jpg");
@@ -168,34 +107,75 @@ footer a:hover {
   margin-bottom: 1rem;
 }
 
+/* social Media */
+.social a {
+  font-size: 4.5em;
+  padding: 3rem;
+}
+
+.fa-facebook {
+  color: #3b5998;
+}
+
+.fa-twitter {
+  color: #00aced;
+}
+
+.fa-google-plus-g {
+  color: #dd4b39;
+}
+
+.fa-instagram {
+  color: #517fa4;
+}
+
+.fa-youtube {
+  color: #bb0000;
+}
+
+.fa-facebook:hover, .fa-twitter:hover, .fa-google-plus-g:hover, .fa-instagram:hover, .fa-youtube:hover {
+  color: #d5d5d5;
+}
+
+/* footer */
+footer {
+  background-color: #343A40;
+  color: #d5d5d5;
+  padding-top: 1rem;
+}
+
+footer a {
+  color: #d5d5d5;
+}
+
+footer a:hover {
+  color: #FFFFFF;
+  text-decoration: none;
+}
+
+/**********************media queries ******************************/
+
+/* Smallest devices */
 @media only screen and (max-width: 599px) {
   .content-header h1 {
     font-size: 45px;
   }
 }
 
-
 /* Small devices (portrait tablets and large phones, 600px and up) */
-
-@media only screen and (min-width: 600px) {}
+@media only screen and (min-width: 600px) {
+  .carousel-item img {
+    width: 100%;
+    height: auto;
+  }
+}
 
 /* Medium devices (landscape tablets, 768px and up) */
-
 @media only screen and (min-width: 768px) {}
 
 /* Large devices (laptops/desktops, 992px and up) */
-
 @media only screen and (min-width: 992px) {}
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
-
 @media only screen and (min-width: 1200px) {
-  .carousel-inner img {
-  height: 750px;
-  width: 100%;
-  /* background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative; */
-}
 }
