--- a/style.css
+++ b/style.css
@@ -178,4 +178,9 @@ footer a:hover {
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
+  .carousel-item img {
+    width: 100%;
+    height: auto;
+  }
+
 }
