--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body, html {
   font-family: 'Poppins', sans-serif;
   color: 222;
   background-color: #FFFFFF;
+  scroll-behavior: smooth;
 }
 
 /* section padding */
