--- a/style.css
+++ b/style.css
@@ -49,6 +49,13 @@ body, html {
 }
 
 /* News Panel */
+
+.box:hover .img-fade {
+  opacity: 0.7;
+  z-index: 2;
+  cursor: pointer;
+}
+
 .news-img1 {
   color: white;
   background-image: url("img/news/mk11_erron_black.jpg");
@@ -58,7 +65,10 @@ body, html {
   height: 50vh;
   border-radius: 10px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  transition: .5s ease;
+  backface-visibility: hidden;
 }
+
 
 .news-img2 {
   color: white;
@@ -69,6 +79,8 @@ body, html {
   height: 50vh;
   border-radius: 10px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  transition: .5s ease;
+  backface-visibility: hidden;
 }
 
 .news-img3 {
@@ -80,6 +92,8 @@ body, html {
   height: 50vh;
   border-radius: 10px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  transition: .5s ease;
+  backface-visibility: hidden;
 }
 
 .news-img4 {
@@ -91,6 +105,8 @@ body, html {
   height: 50vh;
   border-radius: 10px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  transition: .5s ease;
+  backface-visibility: hidden;
 }
 
 .news-text {
